Delete repeated titles and add toc

--- a/Recommender Systems/_posts/2020-10-12-RS-1.md
+++ b/Recommender Systems/_posts/2020-10-12-RS-1.md
@@ -6,8 +6,15 @@ categories:
 date: 2020-10-12
 ---
 
+<!-- TOC START min:1 max:3 link:true asterisk:false update:true -->
+  - [The personalisation buzz](#the-personalisation-buzz)
+  - [Why do we need personalisation?](#why-do-we-need-personalisation)
+  - [Two Types of personalisation](#two-types-of-personalisation)
+  - [Personalisation from consumer perspective](#personalisation-from-consumer-perspective)
+  - [Personalisation of business perspective](#personalisation-of-business-perspective)
+<!-- TOC END -->
 
-## **Introduction**
+
 
 **Augmenting human intelligence**
   - ![image](https://user-images.githubusercontent.com/33334078/95707611-ef097680-0c94-11eb-84b7-33126f74f829.png)
@@ -20,7 +27,7 @@ date: 2020-10-12
   - Ideas of nudging – can nudge the ppl to do better things – amazon
     nudging us to buy stuff
 
-**The personalisation buzz**
+## The personalisation buzz
   - Having a computer system to adapt to users
       - Tailored to what we need, want and best fits current state
   - Human to human interaction and personalisation is natural
@@ -40,15 +47,7 @@ date: 2020-10-12
       - **right** \!\!\! is the smartness
 
 
-**Today**
-  - We are using personalisation from different industries
-      - Ecommerce – amazon, ebay etc
-      - Search – you'll get 2 different response if you search for 2 different laptop
-      - Mobile devices and desktops
-      - Variation of personalised digital portals – newspaper, libraries
-        etc
-
-**Why do we need personalisation?**
+## Why do we need personalisation?
   - Key factors – **right** right right
   - Available info
       - Heterogeneity – is overwhelming so gotta help them find the
@@ -69,7 +68,7 @@ date: 2020-10-12
 
 
 
-**Two Types of personalisation – 2<sup>nd</sup> core slide**
+## Two Types of personalisation
   - **Adaptable systems (customisable)**
       - User is able to modify aspects of the system to suit their
         preferences
@@ -121,7 +120,7 @@ date: 2020-10-12
 
   - Google map – if you rate then it gives you recommendations of new places you might like
 
-**Personalisation from consumer perspective**
+## Personalisation from consumer perspective
   - 80% of consumers stick to a business if the system is
     personalised
   - Personalisation improves the customer experience
@@ -145,7 +144,7 @@ date: 2020-10-12
       - ![image](https://user-images.githubusercontent.com/33334078/95707661-14968000-0c95-11eb-87ee-1fab4fe72192.png)
 
 
-**Personalisation of business perspective**
+## Personalisation of business perspective
   - 50% of companies are providing personalisation
   - What could be the possibility of personalisation?
       - Recommender, personal shopper, diagnostic, filter, teacher user
