--- a/Recommender Systems/_posts/2020-11-11-RS-8.md
+++ b/Recommender Systems/_posts/2020-11-11-RS-8.md
@@ -6,12 +6,16 @@ categories:
 date: 2020-11-11
 ---
 
+<!-- TOC START min:1 max:3 link:true asterisk:false update:true -->
+  - [CHIP tools](#chip-tools)
+  - [Discovering connections via reasoning](#discovering-connections-via-reasoning)
+  - [User profile building](#user-profile-building)
+  - [Summary: Knowledge based filtering](#summary-knowledge-based-filtering)
+<!-- TOC END -->
 
-## **Recommender systems (Part 1) – Knowledge-based recommenders**
 
 
-**The CHIP Project - bridging the gap between virtual and physical
-museum experience**
+**The CHIP Project - bridging the gap between virtual and physical museum experience**
   - Rijksmuseum Amsterdam offers
       - 7000 artworks in the museum
       - 50000 artworks online
@@ -40,7 +44,7 @@ museum experience**
         about the world and the user
 
 
-**CHIP tools**
+## CHIP tools
   - What are the personalisation features?
   - When you are in the digital space, online mostly have recommender
     systems
@@ -75,7 +79,7 @@ museum experience**
     the recommender. Now need to bring this to the recommender
 
 
-**Discovering connections via reasoning**
+## Discovering connections via reasoning
   - How can you bring this external knowledge to help you to explore the
     paintings
   - Based on the metadata mapped with the external knowledge, you can
@@ -94,7 +98,7 @@ museum experience**
   - Then you need to think about mapping the content and the user model
 
 
-**User profile building**
+## User profile building
   - Problem with cold start – need to know about the user and map the
     user to the content
   - How are you going to create the user profile?
@@ -144,7 +148,7 @@ museum experience**
         to the user (CBF won't allow this)
 
 
-**Summary: Knowledge based filtering**
+## Summary: Knowledge based filtering
   - Need to get a good knowledge graph to implement the recommender
   - They build on content-based filtering – user profile and information
     about the content
