--- a/Recommender Systems/_posts/2020-11-23-RS-10.md
+++ b/Recommender Systems/_posts/2020-11-23-RS-10.md
@@ -6,12 +6,20 @@ categories:
 date: 2020-11-23
 ---
 
+<!-- TOC START min:1 max:3 link:true asterisk:false update:true -->
+  - [Hybridization](#hybridization)
+  - [Sources for recommendations](#sources-for-recommendations)
+  - [Recommender algorithms](#recommender-algorithms)
+    - [Comparing recommender algorithms](#comparing-recommender-algorithms)
+    - [Pros and cons of recommender algorithms](#pros-and-cons-of-recommender-algorithms)
+  - [How to combine? Hybridisation algorithms](#how-to-combine-hybridisation-algorithms)
+  - [Summary](#summary)
+<!-- TOC END -->
 
 
 
-## **Recommender systems (Part 3): Hybrid Recommenders**
 
-**Hybridization**
+## Hybridization
   - Several algorithms giving different results – way to combine several algorithms
   - In this note:
     - How to put it next to each other to decide how you going to
@@ -39,7 +47,7 @@ date: 2020-11-23
     no need to know about the content
 
 
-**Sources for recommendations**
+## Sources for recommendations
   - ![image](https://user-images.githubusercontent.com/33334078/95709168-1104f800-0c99-11eb-84f2-4f31bf172e2c.png)
   - Now taking the decision on which algorithm to use – its not straightforward
     what to choose.
@@ -77,7 +85,7 @@ date: 2020-11-23
         you’ve been to the hotel and it still recommends you it
 
 
-**Recommender algorithms – key**
+## Recommender algorithms
 - Need to have a systematic approach on combining different ones
 - What are the key sources ??
 - When I'm developing, what are the features I should bear in mind
@@ -91,14 +99,14 @@ date: 2020-11-23
 - Should be able to: describe what background data, input data and
 algorithms you would use
 
-**Comparing recommender algorithms**
+### Comparing recommender algorithms
 - ![image](https://user-images.githubusercontent.com/33334078/95709202-2417c800-0c99-11eb-9c59-382aa1dfc854.png)
 - Utility – what is the benefit for the user? And it recommends the most efficient or the best choice
   - Best decision – important for doctors when diagnosing
   - People be happy
 
 
-**Pros and cons of recommender algorithms**
+### Pros and cons of recommender algorithms
 - ![image](https://user-images.githubusercontent.com/33334078/95709218-2c700300-0c99-11eb-9a6c-f924ad5a92e4.png)
 - Algorithm in particular context and you need to point out the strength and weakness of the algorithm
   - K - Gray sheep problem – user does not fall in any existing cliques
@@ -126,7 +134,7 @@ algorithms you would use
   - They’ve analysed the strengths and weaknesses of each algorithms to use it accordingly
 
 
-**How to combine? Hybridisation algorithms**
+## How to combine? Hybridisation algorithms
   - For each algorithm, it produces different recommendation – so how do
     we combine them?
   - Netflix took 800 and took the average in the second round. In the
@@ -237,7 +245,7 @@ algorithms you would use
   | The learned model is a compressed representation of user’s interest and a collaborative mechanism that follows can operate on this information-dense representation | |
 
 
-**Summary**
+## Summary
   - **Comparison between methods** – identify pros and cons for each
     method in particular situations
   - **Key features of recommender algorithms**
