--- a/Recommender Systems/_posts/2020-10-12-RS-2.md
+++ b/Recommender Systems/_posts/2020-10-12-RS-2.md
@@ -6,9 +6,15 @@ categories:
 date: 2020-10-12
 ---
 
-## **General Schema of User Adaptive Systems**
+<!-- TOC START min:1 max:3 link:true asterisk:false update:true -->
+  - [Schema of user-Adaptive Systems](#schema-of-user-adaptive-systems)
+  - [Main definitions](#main-definitions)
+  - [Examples](#examples)
+<!-- TOC END -->
 
-**Schema of user-Adaptive Systems**
+
+
+## Schema of user-Adaptive Systems
   - ![image](https://user-images.githubusercontent.com/33334078/95707698-37c12f80-0c95-11eb-985c-756d9df937e4.png)
 
 1.  **Information collection -** When we start to design UAS, we need to
@@ -49,7 +55,7 @@ date: 2020-10-12
   - Need to have confidence in the model and information
 
 
-**Main definitions**
+## Main definitions
   - **User model** – **data structure** that contains explicit
     assumptions on all aspects of User that are relevant to the adaptive
     behaviour of the system
@@ -97,6 +103,8 @@ date: 2020-10-12
       - \*support learning – SQL tutor
 
 
+## Examples
+
 **Adapting the interface - Smart menus**
 
   - We need to think about what info we have about user, diff views of
@@ -135,7 +143,7 @@ date: 2020-10-12
 
 
 
-## **Example - Amazon**
+**Example - Amazon**
 
 **Applying the schema to Amazon**
   - We take info about the user and about external information
