Delete # from toc as link redirection didnt work

--- a/Secure Computing/_posts/2020-02-01-SC-0TOC.md
+++ b/Secure Computing/_posts/2020-02-01-SC-0TOC.md
@@ -17,18 +17,18 @@ date: 2020-02-01
 
 
 ## Table of Contents
-1.	[Introduction](#https://chaerim-kim.github.io/secure%20computing/SC-1/)  
-2.	[Threat modelling](#https://chaerim-kim.github.io/secure%20computing/SC-2/)
-3.	[Symmetric Ciphers](#https://chaerim-kim.github.io/secure%20computing/SC-3/)
-4.	[Message authentication](#https://chaerim-kim.github.io/secure%20computing/SC-4/)
-5.	[Public key cryptography](#https://chaerim-kim.github.io/secure%20computing/SC-5/)
-6.	[Randomness](#https://chaerim-kim.github.io/secure%20computing/SC-6/)
-7.	[User authentication](#https://chaerim-kim.github.io/secure%20computing/SC-7/)
-8.	[TCP/IP networking threats](#https://chaerim-kim.github.io/secure%20computing/SC-8/)
-9.	[Network defences](#https://chaerim-kim.github.io/secure%20computing/SC-9/)
-10.	[Abuse of DNS, ARP & application protocols](#https://chaerim-kim.github.io/secure%20computing/SC-10/)
-11.	[Command injection & input validation](#https://chaerim-kim.github.io/secure%20computing/SC-11/)
-12.	[Buffer Overruns](#https://chaerim-kim.github.io/secure%20computing/SC-12/)
-13.	[Low-level vulnerabilities](#https://chaerim-kim.github.io/secure%20computing/SC-13/)
-14.	[Finding, reporting and avoiding vulnerabilities](#https://chaerim-kim.github.io/secure%20computing/SC-14/)
-15.	[Intrusion Detection & incident response](#https://chaerim-kim.github.io/secure%20computing/SC-15/˜˜)
+1.	[Introduction](https://chaerim-kim.github.io/secure%20computing/SC-1/)  
+2.	[Threat modelling](https://chaerim-kim.github.io/secure%20computing/SC-2/)
+3.	[Symmetric Ciphers](https://chaerim-kim.github.io/secure%20computing/SC-3/)
+4.	[Message authentication](https://chaerim-kim.github.io/secure%20computing/SC-4/)
+5.	[Public key cryptography](https://chaerim-kim.github.io/secure%20computing/SC-5/)
+6.	[Randomness](https://chaerim-kim.github.io/secure%20computing/SC-6/)
+7.	[User authentication](https://chaerim-kim.github.io/secure%20computing/SC-7/)
+8.	[TCP/IP networking threats](https://chaerim-kim.github.io/secure%20computing/SC-8/)
+9.	[Network defences](https://chaerim-kim.github.io/secure%20computing/SC-9/)
+10.	[Abuse of DNS, ARP & application protocols](https://chaerim-kim.github.io/secure%20computing/SC-10/)
+11.	[Command injection & input validation](https://chaerim-kim.github.io/secure%20computing/SC-11/)
+12.	[Buffer Overruns](https://chaerim-kim.github.io/secure%20computing/SC-12/)
+13.	[Low-level vulnerabilities](https://chaerim-kim.github.io/secure%20computing/SC-13/)
+14.	[Finding, reporting and avoiding vulnerabilities](https://chaerim-kim.github.io/secure%20computing/SC-14/)
+15.	[Intrusion Detection & incident response](https://chaerim-kim.github.io/secure%20computing/SC-15/)
