Add 5th's news about brazil-huawai smart farming

--- a/_posts/2020-12-01-News-Dec.md
+++ b/_posts/2020-12-01-News-Dec.md
@@ -7,17 +7,22 @@ date: 2020-12-01
 ---
 
 ## **December's Tech Updates**
+1. [Brazilian soy farmers try 5G technology with Huawei equipment](#brazilian-soy-farmers-try-5g-technology-with-huawei-equipment)  
+2.
 
-## [December 1st, 2020]
 
-##  
-- **Who:**  
-- **What:**  
-- **When:**  
-- **Why:**  
+## [December 5th, 2020]
+
+##  Brazilian soy farmers try 5G technology with Huawei equipment
+- **Who:**  Brazil's Goias and Huawei
+- **What:**  The Brazilian farm state rolled out a pilot project on Thursday to increase productivity and take fast action against disease using fifth-generation technology and equipment provided by China’s Huawei Technologies Co.
+- **When:**  3rd of December, 2020
+- **Why:**  Because the 5G communications will allow producers to improve crops through the collection of information by sensors placed in the fields - by sensors placed in the fields, on harvesters and drones, so that it can be readily crossed with meteorological and humidity data.
 - **How:**  
-- **So?:**  
-- [Link to the article]()
+  - Combining fast broadband communications with real time cloud data processing will give farmers the information so they can rapidly take actions against diseases and other threats to their crops.
+  - The pilot was launched in the soy-farming town of Rio Verde, and uses a 5G network built by telecom company Claro, a unit of Mexico’s América Móvil.
+- **So?:**  Brazil’s government decided not to ban the use of Huawei equipment in next year’s auction of 5G frequencies spectrum; telecommunications regulator Anatel has proposed rules that do not exclude the Chinese Company.
+- [Link to the article](https://www.reuters.com/article/us-brazil-5g/brazilian-soy-farmers-try-5g-technology-with-huawei-equipment-idUSKBN28D3AJ)
 
 
 
