Edit and reorganize its category

--- a/_posts/2020-09-07-Int-Jazz1.md
+++ b/_posts/2020-09-07-Int-Jazz1.md
@@ -1,14 +1,15 @@
 ---
-title: "Jazz Networks - Binary tree and List"
-tags: [Interview Preparation, Binary Tree]
+title: "Binary tree and List - Set Bits of a Binary Tree"
+tags: [Data Structures and Algorithms, Binary Tree, List]
 categories:
-  - Interview Preparation
+  - Data Structures and Algorithms
 date: 2020-09-07
 ---
 
 
-# Q1. Implement a function that counts the set bit of a binary tree in C.
-1. [Binary tree](#what-is-a-binary-tree)  
+## Table of Contents
+**Q:** Implement a function that counts the set bit of a binary tree in C.
+1. [What is a Binary Tree?](#what-is-a-binary-tree)  
   1.1 [Binary Search Tree](#binary-search-tree)
 2. [Steps and Pseudocode](#steps-and-pseudocode)  
   2.1 [Example](#example)  
@@ -18,7 +19,7 @@ date: 2020-09-07
 4. [Test Cases](#test-cases)  
 
 
-## 1. What is a Binary Tree?
+## What is a Binary Tree?
 - A tree whose elements have at most 2 child nodes - the left and the right node.
 - Nodes with no children are called 'leaves'.  
 - The height h of a complete binary tree with N nodes is at most **O(log N)**.
@@ -58,7 +59,7 @@ date: 2020-09-07
 - **InOrder Traversal** : Left then root then right
 - **PreOrder Traversal** : Root then left then right
 - **PostOrder Traversal** : Left then right then root
-- Here we use Pre-Order traversal - Traverse the tree from the root, to the left and the right sub-tree 
+- Here we use Pre-Order traversal - Traverse the tree from the root, to the left and the right sub-tree
 - **Steps**
   1. Visit the root
   2. Traverse the left subtree  
