--- a/_posts/2020-09-07-Int-Jazz2.md
+++ b/_posts/2020-09-07-Int-Jazz2.md
@@ -1,29 +1,29 @@
 ---
-title: "Jazz Networks - Array"
-tags: [Interview Preparation]
+title: "Array - Missing Number and Duplicates"
+tags: [Data Structures and Algorithms, Array]
 categories:
-  - Interview Preparation
+  - Data Structures and Algorithms
 date: 2020-10-14
 ---
 
 
-# Finding a missing number and duplicates in an array
 
 ## Table of Contents
-1. [Q1. Write a function that finds the **missing number** in a given array](#q1-write-a-function-that-finds-the-missing-number-in-a-given-array)  
+**Q:** Find a missing number and duplicates in a given array
+1. [Find a missing number in a given array](#find-a-missing-number-in-a-given-array)  
  1.1 [Example](#example)     
  1.2 [Code Implementation](#code-implementation)  
-2. [Q2. Write a function that finds a **duplicate** in a given array](#q2-write-a-function-that-finds-a-duplicate-number-in-a-given-array)  
+2. [Find duplicates in a given array](#find-duplicates-in-a-given-array)  
   2.1 [Example](#example)     
   2.2 [Code Implementation](#code-implementation)
-3. [Q3. Write a function that finds the **missing number and a duplicate** in a given array](#q1-write-a-function-that-finds-the-missing-number-and-a-duplicate-in-a-given-array)  
+3. [Find a missing number and duplicates in a given array](#find-a-missing-number-and-duplicates-in-a-given-array)  
   3.1 [Example](#example)      
   3.2 [Code Implementation](#code-implementation)     
   3.3 [Time Complexity](#time-complexity)  
   3.4 [Space Complexity](#space-complexity)  
 
 
-## Q1. Write a function that finds the missing number in a given array.
+## Find a missing number in a given array
 ### Example
 
 | Input | Output |
@@ -55,7 +55,7 @@ def findMissing(arr):
 
 
 
-## Q2. Write a function that finds a duplicate in a given array.
+## Q2. Find duplicates in a given array
 ### Example
 
 | Input | Output |
@@ -90,7 +90,7 @@ def find_duplicate(arr):
 
 
 
-## Q3. Write a function that finds the missing number and a duplicate in a given array.
+## Find a missing number and duplicates in a given array
 
 ### Example
 
