Add 9th's news about EU's search engine regulations

--- a/_posts/2020-12-01-News-Dec.md
+++ b/_posts/2020-12-01-News-Dec.md
@@ -6,12 +6,26 @@ categories:
 date: 2020-12-01
 ---
 
+
 ## **December's Tech Updates**
-1. [Brazilian soy farmers try 5G technology with Huawei equipment](#brazilian-soy-farmers-try-5g-technology-with-huawei-equipment)  
-2.
+- change the numbering and remove redundant tocs
+
+<!-- TOC START min:1 max:3 link:true asterisk:false update:true -->
+  - [**December's Tech Updates**](#decembers-tech-updates)
+  - [Brazilian soy farmers try 5G technology with Huawei equipment](#brazilian-soy-farmers-try-5g-technology-with-huawei-equipment)
+  - [EU sets out search ranking guidelines for Google, Microsoft, platforms](#eu-sets-out-search-ranking-guidelines-for-google-microsoft-platforms)
+  - [booobom](#booobom)
+  - [- **Who:**](#--who)
+  - [- **Who:**](#--who-1)
+<!-- TOC END -->
 
 
-## [December 5th, 2020]
+
+
+
+
+
+#### [December 5th, 2020]
 
 ##  Brazilian soy farmers try 5G technology with Huawei equipment
 - **Who:**  Brazil's Goias and Huawei
@@ -26,7 +40,46 @@ date: 2020-12-01
 
 
 
-## [December 3rd, 2020]
+#### [December 9th, 2020]
+
+##  EU sets out search ranking guidelines for Google, Microsoft, platforms
+
+- **Who:**  The European Union
+- **What:**  European Commission guidelines have been set out, making Google, Microsoft and other tech giants to be more transparent in how they rank online search results.
+- **When:**  7th of December, 2020
+- **Why:**  
+  - Because smaller rivals and some companies have long complained about arbitrary and opaque practices, as it affects how their products and services are ranked in search results.
+  - Also, the standard for algorithmic ranking transparency and will increase fairness in the online platform economy, which drives innovation and welfare for millions of Europeans.
+- **How:**  Vestager, A Danish politician will on Dec. 15 present **draft rules** to rein in tech giants - setting out a list of dos and don’ts and increasing their responsibility to take down illegal and harmful content from their platforms, with fines and other sanctions to encourage compliance.
+- **So?:**  The companies will have to identify the algorithmic parameters that determine ranking and to share them with companies.
+- [Link to the article](https://www.reuters.com/article/eu-tech-platforms/eu-sets-out-search-ranking-guidelines-for-google-microsoft-platforms-idUSKBN28H267)
+
+
+
+#### [December 3rd, 2020]
+
+##  booobom
+- **Who:**  
+- **What:**  
+- **When:**  
+- **Why:**  
+- **How:**  
+- **So?:**  
+- [Link to the article]()
+
+
+#### [December 3rd, 2020]
+
+##  
+- **Who:**  
+- **What:**  
+- **When:**  
+- **Why:**  
+- **How:**  
+- **So?:**  
+- [Link to the article]()
+
+#### [December 3rd, 2020]
 
 ##  
 - **Who:**  
