Refill and finish 11th's article about AI and art

--- a/_posts/2020-12-01-News-Dec.md
+++ b/_posts/2020-12-01-News-Dec.md
@@ -14,7 +14,7 @@ date: 2020-12-01
   - [**December's Tech Updates**](#decembers-tech-updates)
   - [Brazilian soy farmers try 5G technology with Huawei equipment](#brazilian-soy-farmers-try-5g-technology-with-huawei-equipment)
   - [EU sets out search ranking guidelines for Google, Microsoft, platforms](#eu-sets-out-search-ranking-guidelines-for-google-microsoft-platforms)
-  - [booobom](#booobom)
+  - [Art in the age of machine intelligence By media artist Refik Anadol](#art-in-the-age-of-machine-intelligence-by-media-artist-refik-anadol)
   - [- **Who:**](#--who)
   - [- **Who:**](#--who-1)
 <!-- TOC END -->
@@ -56,16 +56,41 @@ date: 2020-12-01
 
 
 
-#### [December 3rd, 2020]
+#### [December 11th, 2020]
 
-##  booobom
-- **Who:**  
-- **What:**  
-- **When:**  
-- **Why:**  
-- **How:**  
-- **So?:**  
-- [Link to the article]()
+##  Art in the age of machine intelligence By media artist Refik Anadol
+- The talk explores the melding of **art with artificial intelligence**, delivered by a media artist Refik Anadol.
+- He claims: Data can only become knowledge when it's experienced, and knowledge and experience can take many forms.
+
+**Project 1: Archive Dreaming**
+- One of the first AI-driven public installations in the world, exploring approximately 1.7 million documents that span 270 years.
+- The resulting work was a user-driven immersive space that challenges immutable concepts of the archive, while destabilizing archive-related questions with machine learning algorithms.
+
+|   |    |
+| --- | ---- |  
+| ![image](https://user-images.githubusercontent.com/33334078/102006223-b9e7d600-3d62-11eb-8f17-32a9a98ef022.png) | ![image](https://user-images.githubusercontent.com/33334078/102006235-d84dd180-3d62-11eb-97ae-769b9c4cb8b1.png) |
+
+
+**Project 2: Machine Hallucination**  
+- An exploration of time and space, challenging the conventional definition of 'space' as the boundless, experienced through NYC public photographic archive.
+- Represents a wide-ranging selection of architectural styles and movements and reveals the hidden connections between these moments in history
+- Explores the ways in which knowledge can be experienced spatially.
+
+|   |    |
+| --- | ---- |  
+| ![image](https://user-images.githubusercontent.com/33334078/102006308-878aa880-3d63-11eb-8f4c-59f752609010.png) | ![image](https://user-images.githubusercontent.com/33334078/102006313-8fe2e380-3d63-11eb-9ac3-329f56db334d.png) |
+
+
+**Project 3: Ted talk Archive**
+- They collected 7705 ted talks, extracted 487,168 sentences, to further extract into 330 unique clusters of topics like nature, global emissions, extinction, computation and etc.
+- These clusters are then connected to each other by an algorithm, that generated 113 million line segments, which reveal new conceptual relationships.
+- The result is a space where you interact with various feelings attributed to learning, remembering, questioning and imagining all at the same time, expanding the power of the mind.
+
+|   |    |
+| --- | ---- |  
+|![i](https://user-images.githubusercontent.com/33334078/102006415-5199f400-3d64-11eb-8489-8a37aec30dd5.png) | !![s](https://user-images.githubusercontent.com/33334078/102006424-64acc400-3d64-11eb-9c7c-3e0b35a65c35.png) |
+
+- [Link to the article](https://www.ted.com/talks/refik_anadol_art_in_the_age_of_machine_intelligence/transcript#t-190124)
 
 
 #### [December 3rd, 2020]
