Add 14th's news about EU content rules

--- a/_posts/2020-12-01-News-Dec.md
+++ b/_posts/2020-12-01-News-Dec.md
@@ -15,8 +15,8 @@ date: 2020-12-01
   - [Brazilian soy farmers try 5G technology with Huawei equipment](#brazilian-soy-farmers-try-5g-technology-with-huawei-equipment)
   - [EU sets out search ranking guidelines for Google, Microsoft, platforms](#eu-sets-out-search-ranking-guidelines-for-google-microsoft-platforms)
   - [Art in the age of machine intelligence By media artist Refik Anadol](#art-in-the-age-of-machine-intelligence-by-media-artist-refik-anadol)
+  - [Big tech firms to face 6% fines if breach new EU content rules - A followup](#big-tech-firms-to-face-6-fines-if-breach-new-eu-content-rules---a-followup)
   - [- **Who:**](#--who)
-  - [- **Who:**](#--who-1)
 <!-- TOC END -->
 
 
@@ -93,16 +93,22 @@ date: 2020-12-01
 - [Link to the article](https://www.ted.com/talks/refik_anadol_art_in_the_age_of_machine_intelligence/transcript#t-190124)
 
 
-#### [December 3rd, 2020]
+#### [December 14th, 2020]
 
-##  
-- **Who:**  
-- **What:**  
-- **When:**  
+##  Big tech firms to face 6% fines if breach new EU content rules - A followup
+This article is a follow-up of 9th's news.  
+- **Who:**  The European union and big tech firms such as Google and Facebook.
+- **What:**  Tech giants will be fined up to 6% of turnover if they do not tackle illegal content and reveal more about advertising on their platforms under draft EU rules.
+- **When:**  The EU draft rules known as the Digital Services Act (DSA will be published on Dec. 15.
 - **Why:**  
+  - The strict rule comes amid growing regulatory scrutiny worldwide of tech giants and their control of data and access to their platforms.
+  - It is to address public policy concerns and the systemic risks posed by their services.
 - **How:**  
+  - The companies will be required to publish **details of their online advertisers** and **show the parameters used by their algorithms** to suggest and rank information.
+  - Then, independent auditors will monitor compliance with the EU enforcements.
 - **So?:**  
-- [Link to the article]()
+  - However, the draft rules could take a year or more to come into force as they have to take into account feedback from EU countries and the European Parliament.
+- [Link to the article](https://www.reuters.com/article/eu-tech-rules/big-tech-firms-to-face-6-fines-if-breach-new-eu-content-rules-idUSKBN28L27Q)
 
 #### [December 3rd, 2020]
 
