Edit xml code to not render when loading

--- a/_posts/2020-12-14-Jekyll-1.md
+++ b/_posts/2020-12-14-Jekyll-1.md
@@ -3,18 +3,22 @@ title: "지킬 (Jekyll) 블로그에 사이트맵 추가하기"
 tags: [Jekyll Blog]
 categories:
   - Jekyll Blog
-  - 지킬 블로그
 date: 2020-12-21
 ---
 
 
 🗺 안녕하세요, 오늘은 사이트가 서치에 걸리게 하기 위해선 필수! 인 사이트맵 추가 방법을 다뤄보겠습니다. 추가로 구글 서치 콘솔에 사이트맵 등록하는 법과 몇가지 주의점을 추가해 봤어요.
 
+<br />
+
 **Table of Contents**
+<!-- TOC START min:1 max:3 link:true asterisk:false update:true -->
 - [사이트맵이란?](#사이트맵이란)
-- [1. 플러그인 사용해서 사이트맵 생성](#1-플러그인-사용해서-사이트맵-생성)
-- [2. 수동 사이트맵 생성](#2-수동-사이트맵-생성)
+- [플러그인을 사용한 사이트맵 생성](#플러그인을-사용한-사이트맵-생성)
+- [수동 사이트맵 생성](#수동-사이트맵-생성)
 - [구글 서치 콘솔에 사이트맵 등록하기](#구글-서치-콘솔에-사이트맵-등록하기)
+  - [잠깐!](#잠깐)
+<!-- TOC END -->
 
 
 
@@ -30,8 +34,9 @@ date: 2020-12-21
 
 등등을 정의합니다. 말 그대로 사이트의 지도 역할을 하죠. 이 사이트의 사이트맵은 [여기](https://chaerim-kim.github.io/sitemap.xml)서 확인하실 수 있습니다. 🙂
 
+<br />
 
-지킬블로그에는 크게 세가지의 사이트맵 생성법이 있어요.
+#### 지킬블로그에는 크게 세가지의 사이트맵 생성법이 있어요.
 
 1. [플러그인을 사용한 사이트맵 생성](#플러그인을-사용한-사이트맵-생성)  
 2. [수동 사이트맵 생성](#수동-사이트맵-생성)  
@@ -76,6 +81,7 @@ layout:null
 ---
 <?xml version="1.0" encoding="UTF-8"?>
 <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
+{% raw %}
     {% for post in site.posts %}
     <url>
         <loc>{{site.url}}{{ post.url | remove: 'index.html' }}</loc>
@@ -91,6 +97,7 @@ layout:null
     {% endif %}
     {% endif %}
     {% endfor %}
+{% endraw %}
 </urlset>
 ```
 
@@ -125,4 +132,5 @@ layout:null
 
 이런식으로 처리되어서 문제를 찾는데 좀 헤맸어요 🙃
 
+<br /><br />
 감사합니다.
