Change post title for unity

--- a/_posts/2020-12-14-Jekyll-1.md
+++ b/_posts/2020-12-14-Jekyll-1.md
@@ -1,5 +1,5 @@
 ---
-title: "(Jekyll) 지킬 깃허브 블로그 구글 검색 - 사이트맵 추가하기"
+title: "[Jekyll] 깃허브 지킬 블로그 구글 검색에 나타나게 하기 - 사이트맵 추가하기"
 tags: [Jekyll Blog]
 categories:
   - Jekyll Blog
