--- a/_posts/2020-12-14-Jekyll-2.md
+++ b/_posts/2020-12-14-Jekyll-2.md
@@ -19,7 +19,6 @@ date: 2020-12-28
 <br />
 
 **Table of Contents**  
-총 수정해야 할 파일은 3개입니다.
 <!-- TOC START min:1 max:3 link:true asterisk:false update:true -->
   - [navigation.yaml 수정하기](#navigationyaml-수정하기)
   - [masthead.html 수정하기](#mastheadhtml-수정하기)
@@ -31,7 +30,10 @@ date: 2020-12-28
 
 ## navigation.yaml 수정하기
 Navigation 바를 컨트롤 하는 파일입니다. 메인 카테고리 밑에 `sublinks`를 추가하여 원하는 서브 카테고리를 추가하세요. 총 2개의 레벨까지만 지원합니다.
-![Screenshot 2020-12-28 at 1 11 19 pm](https://user-images.githubusercontent.com/33334078/103189028-32779680-490e-11eb-902f-7c19252ff55f.png)
+
+<p align="center">
+<img src="https://user-images.githubusercontent.com/33334078/103189028-32779680-490e-11eb-902f-7c19252ff55f.png" />
+</p>
 
 
 ## masthead.html 수정하기
@@ -46,6 +48,7 @@ _includes 폴더의 `masthead.html` 에 아래 코드를 추가합니다. `subli
 
 
 ```html
+{% raw %}
 <ul class="visible-links">
    {%- for link in site.data.navigation.main -%}
        {% assign class = nil %}
@@ -69,6 +72,7 @@ _includes 폴더의 `masthead.html` 에 아래 코드를 추가합니다. `subli
        {% endif %}
    {% endfor %}
 </ul>
+{% endraw %}
 ```
 
 ## _navigation.scss 수정하기
