Add explanation to code snippet

--- a/_posts/2020-12-14-Jekyll-2.md
+++ b/_posts/2020-12-14-Jekyll-2.md
@@ -76,13 +76,16 @@ _includes 폴더의 `masthead.html` 에 아래 코드를 추가합니다. `subli
 ```
 
 ## _navigation.scss 수정하기
-이제는 스타일을 수정합니다 - _sass폴더의 `_navigation.scss` 파일을 열어주세요. .greedy-nav {} 속성의 값을 바꿔줄건데요, 그리디 네브는 이 테마에서 상단 네비게이션 바의 이름입니다.
+이제는 스타일을 수정합니다 - _sass폴더의 `_navigation.scss` 파일을 열어주세요. .greedy-nav {} **안의**속성의 값을 바꿔줄건데요, 그리디 네브는 이 테마에서 상단 네비게이션 바의 이름입니다.
 
 아래 코드가 완벽하진 않아요. 하지만 해당 속성을 기본값으로 하시고, 원하는대로 바꿔서 사용하시길 바랍니다.
 visible link는 마우스가 호버 됐을때의 스타일 값이고, hidden links는 안된 상태의 스타일입니다. 메뉴 폭이나 마진을 바꾸실때 꼭 둘 다 바꾸셔야 통일감이 있습니다.
 
 이 [커밋](https://github.com/chaerim-kim/chaerim-kim.github.io/commit/2d98058516249611548a6af2bf6f4e84d31d0086#diff-60eaaffdc08d973e71755c9c1be456c6516330c29a3f68e926cdacebfca0c303) 을 참고하시기 바랍니다.
 
+** .greedy-nav{
+  // 여기에 들어가는 코드입니다!
+}
 
 ```scss
   // to be shared by both hidden link and visible link
