Fix alignment issue with post

--- a/_posts/2020-12-14-Jekyll-2.md
+++ b/_posts/2020-12-14-Jekyll-2.md
@@ -83,9 +83,11 @@ visible link는 마우스가 호버 됐을때의 스타일 값이고, hidden lin
 
 이 [커밋](https://github.com/chaerim-kim/chaerim-kim.github.io/commit/2d98058516249611548a6af2bf6f4e84d31d0086#diff-60eaaffdc08d973e71755c9c1be456c6516330c29a3f68e926cdacebfca0c303) 을 참고하시기 바랍니다.
 
-** .greedy-nav{
-  // 여기에 들어가는 코드입니다!
-}
+<br />
+💡 .greedy-nav{  
+  // 여기에 들어가는 코드입니다!  
+}  
+
 
 ```scss
   // to be shared by both hidden link and visible link
