--- a/_posts/2020-12-14-Jekyll-2.md
+++ b/_posts/2020-12-14-Jekyll-2.md
@@ -7,7 +7,7 @@ date: 2020-12-28
 ---
 
 
-안녕하세요. 오늘은 깃허브 블로그의 상단 메뉴바에 드롭다운, 또는 서브메뉴 만드는 법을 알아볼개요.
+안녕하세요. 오늘은 깃허브 블로그의 상단 메뉴바에 드롭다운, 또는 서브메뉴 만드는 법을 알아볼게요.
 <p align="center">
 <img src="https://user-images.githubusercontent.com/33334078/103188674-c21c4580-490c-11eb-8c29-653110857796.png" />
 </p>
