Change title for better search result

--- a/_posts/2020-12-14-Jekyll-2.md
+++ b/_posts/2020-12-14-Jekyll-2.md
@@ -1,5 +1,5 @@
 ---
-title: "[Jekyll] 깃허브 지킬 블로그 카테고리 드롭다운 메뉴, 서브 메뉴 만들기 (Jekyll hierarchical menu)"
+title: "[Jekyll] 깃허브 지킬 블로그 드롭다운 메뉴, 서브 카테고리 만들기 (Jekyll hierarchical category)"
 tags: [Jekyll Blog]
 categories:
   - Jekyll Blog
@@ -14,7 +14,7 @@ date: 2020-12-28
 
 다양한 서치 키워드로 찾아보았지만, (Jekyll category dropdown, Jekyll navbar hierarchical category, Jekyll category submenu, Jekyll multi-level navbar) 정보가 많이 없더라구요.
 
-저는 mmistakes 님 테마에서 조금씩 수정해서 위의 모습으로 만들었습니다. 가장 도움을 많이 받은 방법은, 원작자님 [깃허브 프로젝트](https://github.com/mmistakes/minimal-mistakes/issues)의 Issues 섹션에서 menu dropdown 등의 원하는 키워드로 찾아보는 것이었어요. 비슷한 기능을 원하는 사람도, 이미 기능을 구현해서 올린 이슈도 있었거든요.
+저는 mmistakes 님의 [Minimal-mistakes](https://github.com/mmistakes/minimal-mistakes) 테마에서 조금씩 수정해서 위의 모습으로 만들었습니다. 가장 도움을 많이 받은 방법은, 원작자님 [깃허브 프로젝트](https://github.com/mmistakes/minimal-mistakes/issues)의 Issues 섹션에서 menu dropdown 등의 원하는 키워드로 찾아보는 것이었어요. 비슷한 기능을 원하는 사람도, 이미 기능을 구현해서 올린 이슈도 있었거든요.
 
 <br />
 
