Remove html tags for center aligning

--- a/_posts/2020-12-14-Jekyll-1.md
+++ b/_posts/2020-12-14-Jekyll-1.md
@@ -46,9 +46,9 @@ date: 2020-12-21
 # 플러그인을 사용한 사이트맵 생성
 
 1. 프로젝트 루트폴더의 **Gemfile** 에서, 사진과 같이 사이트맵 플러그인을 추가합니다.
-<p align="center">
-  <img src="https://user-images.githubusercontent.com/33334078/102756015-9b14bf80-43b2-11eb-95f6-69606e5621f0.png" />
-</p>
+
+![img](https://user-images.githubusercontent.com/33334078/102756015-9b14bf80-43b2-11eb-95f6-69606e5621f0.png)
+
 
 ```java
 gem "jekyll-sitemap"
@@ -57,17 +57,13 @@ gem "jekyll-sitemap"
 2. 그 후, `bundle install`을 실행하여 플러그인을 설치해 줍니다.
 
 3. 프로젝트 루트의 **_config.yml** 파일에 플러그인 `jekyll-sitemap` 을 추가해줍니다.
-<p align="center">
-  <img src="https://user-images.githubusercontent.com/33334078/102756020-9cde8300-43b2-11eb-998a-1fa6e53eb7db.png" />
-</p>
+![img](https://user-images.githubusercontent.com/33334078/102756020-9cde8300-43b2-11eb-998a-1fa6e53eb7db.png)
 
 
 
 해당 사이트에 /sitemap.xml 을 추가하여 접속하시면 완성! 지킬 플러그인이 자동으로 사이트맵을 생성하였습니다.
 
-<p align="center">
-  <img src="https://user-images.githubusercontent.com/33334078/102756026-9d771980-43b2-11eb-9bcd-1bd33ffad3cf.png" />
-</p>
+![img](https://user-images.githubusercontent.com/33334078/102756026-9d771980-43b2-11eb-9bcd-1bd33ffad3cf.png)
 
 
 
@@ -107,8 +103,7 @@ layout:null
 # 구글 서치 콘솔에 사이트맵 등록하기
 
 사이트맵을 생성했다면, 서치 사이트에 등록을 해야겠죠?!
-
-[https://search.google.com/search-console/](https://search.google.com/search-console/sitemaps?resource_id=https%3A%2F%2Fchaerim-kim.github.io%2F) 에 접속하셔서, 등록한 사이트의  Sitemaps 섹션에 /sitemap.xml을 추가하시기 바랍니다.
+[구글 서치 콘솔](https://search.google.com/search-console/sitemaps?resource_id=https%3A%2F%2Fchaerim-kim.github.io%2F) 에 접속하셔서, 등록한 사이트의  Sitemaps 섹션에 /sitemap.xml을 추가하시기 바랍니다.
 
 성공적으로 추가되었다면, 이런 페이지가 뜹니다!
 <p align="center">
