Add 7th's news about Nvidia and Arm deal

--- a/_posts/2021-1-01-News-Jan.md
+++ b/_posts/2021-1-01-News-Jan.md
@@ -8,8 +8,11 @@ date: 2021-1-01
 
 <!-- TOC START min:1 max:3 link:true asterisk:false update:true -->
   - [Los Angeles to offer vaccine record on iPhones](#los-angeles-to-offer-vaccine-record-on-iphones)
-  - [- **Who:** People who get the coronavirus vaccine in LA](#--who-people-who-get-the-coronavirus-vaccine-in-la)
+  - [UK competition watchdog to probe Nvidia's Arm takeover](#uk-competition-watchdog-to-probe-nvidias-arm-takeover)
   - [- **Who:**](#--who)
+  - [- **Who:**](#--who-1)
+  - [- **Who:**](#--who-2)
+  - [- **Who:**](#--who-3)
 <!-- TOC END -->
 
 
@@ -33,26 +36,58 @@ date: 2021-1-01
 
 
 
+#### [January 7th, 2020]
+
+##  UK competition watchdog to probe Nvidia's Arm takeover
+- **Who:**  Britain's competition regulator (watchdog)
+- **What:** Announced that it would start an investigation into Nvidia Corp’s $40 billion deal to buy UK-based chip designer Arm Holdings.
+- **When:** 6th of January, 2021
+- **Why:**  
+  - This regards the deal of Nvidia, the biggest U.S. chip company and Japan’s SoftBank Group in September to buy Arm.
+  - The deal has raised concerns about the potential impact on Arm’s long-standing position as a so-called neutral supplier, whose chip technology is used by a variety of customers (Apple, Qualcomm and a host of others).
+- **How:**
+  - Nvidia has pledged to retain Arm’s open-licensing model and keep the customer neutrality.
+  - It will install “firewalls” to ensure Nvidia does not access confidential information from Arm’s customers, some of which would be its competitors, or get early access to Arm’s products, said a top Arm executive.
+  - The UK government also included that Nvidia should keep Arm’s head office and staff in Cambridge, eastern England.
+- **So?:**  The approval process will take about 18 months from the day the deal was signed.
+- [Link to the article](https://www.reuters.com/article/us-arm-holdings-m-a-nvidia-cma/uk-competition-watchdog-to-probe-nvidias-arm-takeover-idUSKBN29B1NF)
+
+
+
 #### [January 3rd, 2020]
 
 ##  
 - **Who:**  
-- **What:**
-- **When:**
-- **Why:**
-- **How:**
-- **So?:**
-- [Link to the article]()
-
-
-
-#### [January 3rd, 2020]
+- **What:**  
+- **When:**  
+- **Why:**  
+- **How:**  
+- **So?:**  
+- [Link to the article]()#### [January 3rd, 2020]
 
 ##  
 - **Who:**  
-- **What:**
-- **When:**
-- **Why:**
-- **How:**
-- **So?:**
+- **What:**  
+- **When:**  
+- **Why:**  
+- **How:**  
+- **So?:**  
+- [Link to the article]()#### [January 3rd, 2020]
+
+##  
+- **Who:**  
+- **What:**  
+- **When:**  
+- **Why:**  
+- **How:**  
+- **So?:**  
+- [Link to the article]()#### [January 3rd, 2020]
+
+##  
+- **Who:**  
+- **What:**  
+- **When:**  
+- **Why:**  
+- **How:**  
+- **So?:**  
 - [Link to the article]()
