11th's news about apple hyundai electric car contract

--- a/_posts/2021-1-01-News-Jan.md
+++ b/_posts/2021-1-01-News-Jan.md
@@ -6,18 +6,19 @@ categories:
 date: 2021-1-01
 ---
 
+**Table of Contents**
 <!-- TOC START min:1 max:3 link:true asterisk:false update:true -->
   - [Los Angeles to offer vaccine record on iPhones](#los-angeles-to-offer-vaccine-record-on-iphones)
   - [UK competition watchdog to probe Nvidia's Arm takeover](#uk-competition-watchdog-to-probe-nvidias-arm-takeover)
+  - [Apple, Hyundai set to agree electric car tie-up, says Korea IT News](#apple-hyundai-set-to-agree-electric-car-tie-up-says-korea-it-news)
   - [- **Who:**](#--who)
   - [- **Who:**](#--who-1)
   - [- **Who:**](#--who-2)
-  - [- **Who:**](#--who-3)
 <!-- TOC END -->
 
 
 
-#### [January 3rd, 2020]
+#### [January 3rd, 2021]
 
 ## Los Angeles to offer vaccine record on iPhones
 - **Who:** People who get the coronavirus vaccine in LA
@@ -36,7 +37,7 @@ date: 2021-1-01
 
 
 
-#### [January 7th, 2020]
+#### [January 7th, 2021]
 
 ##  UK competition watchdog to probe Nvidia's Arm takeover
 - **Who:**  Britain's competition regulator (watchdog)
@@ -54,7 +55,22 @@ date: 2021-1-01
 
 
 
-#### [January 3rd, 2020]
+#### [January 11th, 20201]
+
+##  Apple, Hyundai set to agree electric car tie-up, says Korea IT News
+- **Who:**  Hyundai Motor and Apple Inc.
+- **What:**  The two plan to sign a partnership deal on autonomous electric cars by March and start production around **2024** in the United States, aiming to launch a self-driving electric car in **2027**.
+- **When:** The report said Hyundai and Apple planned to release a “beta version” of the Apple cars next year. However the production is planned to start around 2024.
+- **Why:**  Apple was moving forward with autonomous car technology and aimed to produce a passenger vehicle that could include its own breakthrough battery technology as early as 2024.
+- **How:**  
+  - An IT news report, now removed, has included that the companies planned to build the cars at **Kia Motors’ factory in Georgia**, or invest jointly in a **new factory **in the United States to produce 100,000 vehicles around 2024.
+  - The full annual capacity of the proposed plant would be 400,000 vehicles.
+  - The report also said Hyundai and Apple planned to release a “beta version” of the Apple cars next year.
+- **So?:**  It sent Hyundai shares up nearly 20%. Hyundai Motor rose 14.6%, Hyundai Mobis shares rose 12.7% and Kia shares rose 9.1%.
+- [Link to the article](https://www.reuters.com/article/us-hyundai-motor-apple/apple-hyundai-set-to-agree-electric-car-tie-up-says-korea-it-news-idUSKBN29F0C3)
+
+
+#### [January 11th, 20201]
 
 ##  
 - **Who:**  
@@ -63,7 +79,10 @@ date: 2021-1-01
 - **Why:**  
 - **How:**  
 - **So?:**  
-- [Link to the article]()#### [January 3rd, 2020]
+- [Link to the article]()
+
+
+#### [January 11th, 20201]
 
 ##  
 - **Who:**  
@@ -72,16 +91,10 @@ date: 2021-1-01
 - **Why:**  
 - **How:**  
 - **So?:**  
-- [Link to the article]()#### [January 3rd, 2020]
+- [Link to the article]()
 
-##  
-- **Who:**  
-- **What:**  
-- **When:**  
-- **Why:**  
-- **How:**  
-- **So?:**  
-- [Link to the article]()#### [January 3rd, 2020]
+
+#### [January 11th, 20201]
 
 ##  
 - **Who:**  
