Fix typo in post

--- a/_posts/2021-1-5-Jekyll-3.md
+++ b/_posts/2021-1-5-Jekyll-3.md
@@ -47,7 +47,7 @@ date: 2021-1-5
 ## 현재 사용되고 있는 폰트 보기
 현재 쓰고 있는 폰트를 보려면 (디버깅 툴) 아래 방법을 쓰시면 됩니다.
 - 윈도우: `오른쪽 마우스-도구 더보기-개발자 도구` or `ctrl + shift + I`
-- 맥 사파리:  `오른쪽 마우스-요소 점검` Cmd + Opt + I (Mac)
+- 맥 사파리:  `오른쪽 마우스-요소 점검` or `Cmd + Opt + I` (Mac)
 <p align="center">
 <img src="https://user-images.githubusercontent.com/33334078/103601119-5198a880-4f4c-11eb-85c8-ca7e50de9ef7.png" />
 </p>
