--- a/_posts/2021-1-01-News-Jan.md
+++ b/_posts/2021-1-01-News-Jan.md
@@ -11,9 +11,9 @@ date: 2021-1-01
   - [Los Angeles to offer vaccine record on iPhones](#los-angeles-to-offer-vaccine-record-on-iphones)
   - [UK competition watchdog to probe Nvidia's Arm takeover](#uk-competition-watchdog-to-probe-nvidias-arm-takeover)
   - [Apple, Hyundai set to agree electric car tie-up, says Korea IT News](#apple-hyundai-set-to-agree-electric-car-tie-up-says-korea-it-news)
+  - [Father of the Web Tim Berners-Lee prepares 'do-over'](#father-of-the-web-tim-berners-lee-prepares-do-over)
   - [- **Who:**](#--who)
   - [- **Who:**](#--who-1)
-  - [- **Who:**](#--who-2)
 <!-- TOC END -->
 
 
@@ -55,7 +55,7 @@ date: 2021-1-01
 
 
 
-#### [January 11th, 20201]
+#### [January 11th, 2021]
 
 ##  Apple, Hyundai set to agree electric car tie-up, says Korea IT News
 - **Who:**  Hyundai Motor and Apple Inc.
@@ -70,7 +70,23 @@ date: 2021-1-01
 - [Link to the article](https://www.reuters.com/article/us-hyundai-motor-apple/apple-hyundai-set-to-agree-electric-car-tie-up-says-korea-it-news-idUSKBN29F0C3)
 
 
-#### [January 11th, 20201]
+#### [January 13th, 2021]
+
+##  Father of the Web Tim Berners-Lee prepares 'do-over'
+- **Who:**  Sir Tim Berners-Lee, the British computer scientist who invented the World Wide Web (WWW)
+- **What:**  Wants to re-make cyberspace in order to fix some of the problems such as privacy and data control that web brings.
+- **Why:**  Because people are "fed up with the lack of controls, the silos" - hence, enabling the personal control of private data will lead to a new way of collaboration.
+- **How:**  
+  - With a new startup called **Inrupt** - it builds on ideas developed by an open-source software project called Solid.
+  - They plan to build a new web where people can use a single sign-on for any service, and have control over personal data as data is stored in “pods,” or personal online data stores.
+- **So?:**  
+  - The CEO of Inrupt has signed up Britain’s National Health Service (NHS), the BBC and the government of Flanders in Belgium as pilot customers.
+  - It plans on addressing the long-standing problem of incompatible medical records of NHS.
+  - At its core, "the new web" is mostly a set of protocols for how machines talk to each other. Hence, a key aim for Inrupt is to get software developers to write programs for the platform, to actualise the revolution. 
+- [Link to the article](https://www.reuters.com/article/us-tech-bernerslee-interview/father-of-the-web-tim-berners-lee-prepares-do-over-idUSKBN29H1JK)
+
+
+#### [January 11th, 2021]
 
 ##  
 - **Who:**  
@@ -82,19 +98,7 @@ date: 2021-1-01
 - [Link to the article]()
 
 
-#### [January 11th, 20201]
-
-##  
-- **Who:**  
-- **What:**  
-- **When:**  
-- **Why:**  
-- **How:**  
-- **So?:**  
-- [Link to the article]()
-
-
-#### [January 11th, 20201]
+#### [January 11th, 2021]
 
 ##  
 - **Who:**  
